--- a/CIS 216/README
+++ b/CIS 216/README
@@ -1,3 +1,4 @@
 University of Maine, Augusta
 CIS 215 C# & .NET Framework
+Any missing Week means there was no homework for that week
 All code authored by Christian Edge
